prusti-tests/tests/verify/ui/false.stderr
error: [Prusti: verification error] postcondition might not hold.
 --> $DIR/false.rs:8:11
  |
8 | #[ensures(false)]
  |           ^^^^^
  |
note: the error originates here
 --> $DIR/false.rs:9:1
  |
9 | fn test1() {}
  | ^^^^^^^^^^^^^

error: [Prusti: verification error] the asserted expression might not hold
  --> $DIR/false.rs:12:5
   |
12 |     assert!(false);
   |     ^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 2 previous errors

